# vkr-katalshov

./: .env.example  .gitignore  CLAUDE.md  README.md  ВКР_План.md  ВКР_План_Phase1_Сбор_информации.md  ВКР_План_Phase2_Действия.md  ВКР_План_Phase2_Спецификация.md  ВКР_План_Phase3_Симулятор.md  ВКР_План_Phase4_Модуль_FLV.md  ВКР_План_Phase5_Эксперименты.md  ВКР_План_Phase6_ПЗ.md  ВКР_План_Phase7_Презентация.md
01_Источники/: BIBLIO.bib  Phase1_отчёт.md  _README.md
01_Источники/01_ГОСТ/: _README.md
01_Источники/02_ФГОС/: competencies.md
01_Источники/03_МГТУ/: 10_blank_vkrb_K4.doc
01_Источники/04_Литература/01_FLV_RV/: _README.md
01_Источники/04_Литература/02_Метрология/: _README.md
01_Источники/04_Литература/03_LabVIEW_TestStand/: _README.md
01_Источники/04_Литература/04_FSM_Timed/: _README.md
01_Источники/04_Литература/05_DSL_формализация/: _README.md
01_Источники/04_Литература/06_Семантический_разрыв/: _README.md
01_Источники/05_Аналоги/: _README.md  _сравнение.md
02_Спецификация/: _README.md  architecture.md  architecture.mmd  dsl_v1.yaml  event_log.schema.json  event_log_format.md  flv_dsl.schema.json  formal_model.md  positioning.md  simulator_arch.md  ui_tokens.md  validate.py  violations_catalog.md
03_Симулятор/: README.md  _README.md  _выбор_стенда.md  pyproject.toml
03_Симулятор/scenarios/: _README.md  s1_correct.yaml  s1_n_too_low.yaml  s1_pred_fail.yaml  s1_range_mism.yaml  s1_seq_miss.yaml  s1_seq_order.yaml  s1_time_over.yaml  s1_time_under.yaml
03_Симулятор/sim/: __init__.py  cli.py  config.py  control_loop.py  event_logger.py  injector.py  scenario_runner.py  sensor.py  thermal_model.py  uncertainty_model.py
03_Симулятор/tests/: conftest.py  test_control.py  test_event_logger.py  test_runner_and_injector.py  test_sensor.py  test_thermal.py  test_uncertainty.py
03_Симулятор/viz/: __init__.py  dashboard_dash.py  plot_static.py  pyvista_3d.py
04_FLV/: README.md  _README.md  pyproject.toml
04_FLV/benchmarks/: bench_matchers.py  bench_results.json
04_FLV/docs/: usage.md
04_FLV/flv/: __init__.py  __main__.py  anti_hallucination.py  core.py  llm_explainer.py  llm_extractor.py  plugins.py  reporter.py  verdict.py
04_FLV/flv/adapters/: __init__.py  jsonl.py
04_FLV/flv/dsl/: __init__.py  yaml_adapter.py
04_FLV/flv/llm/: __init__.py  mock.py  openrouter.py
04_FLV/flv/matchers/: __init__.py  base.py  predicate.py  sequence.py  timing.py
04_FLV/tests/: conftest.py  test_anti_hallucination.py  test_dsl_loader.py  test_e2e_pipeline.py  test_jsonl_adapter.py  test_matchers.py  test_verdict.py
05_Эксперименты/: README.md  _README.md  pyproject.toml  results.xlsx  stat_report.md  verdict_under.md
05_Эксперименты/experiments/: __init__.py  analyze.py  baseline.py  plots.py  run_all.py  stats.py
05_Эксперименты/notebooks/: analysis.ipynb
05_Эксперименты/runs/: _metadata.csv
05_Эксперименты/tests/: conftest.py  test_analyze.py  test_plots.py  test_stats.py
06_ПЗ/: K2-81B_Katalshov_D.A._Plan_VKR.docx  Otchet_dlya_nauchruka.docx  Struktura_VKR.docx  _README.md  build_plan_docx.py  build_struktura_docx.py  build_supervisor_docx.py
06_ПЗ/draft/: 01_Otchet_dlya_nauchruka.md  02_Plan_VKR.md
06_ПЗ/draft/figures/: case_anti_hallucination.md
07_Презентация/: _README.md
99_Артефакты/: ADR_001_emulation_diagrams.md  ADR_002_role_of_LLM.md  ADR_003_simulator_engineering_stack.md  ADR_004_flv_as_pluggable_framework.md  SIMULATOR_AUDIT_normative.md  _README.md  sources_compliance.md
99_Артефакты/00_Исходные/: ИДЕИ_ПОД_ВКР.md  Концепт.md  Предложение_по_теме_ВКР.md  план_ВКР.md
skills/: _README.md  vkr-bauman-flv.skill
skills/vkr-bauman-flv/: SKILL.md
skills/vkr-bauman-flv/agents/: _README.md  benchmark-runner.md  bibtex-validator.md  chapter-writer.md  code-to-chapter.md  compliance-checker.md  experiment-runner.md  figure-generator.md  gost-fetcher.md  literature-searcher.md  paper-auditor.md  plan-sync.md  stat-analyzer.md
skills/vkr-bauman-flv/assets/: bibtex_template.bib  chapter_checklist.md
skills/vkr-bauman-flv/evals/: evals.json
skills/vkr-bauman-flv/references/: bachelor_diploma_structure.md  bauman_template_guide.md  citation_workflow.md  electrical_schematics.md  flv_domain_knowledge.md  gost_7.0.5_citation.md  gost_7.32_structure.md  measurement_simulator.md  mermaid_for_flv.md  scientific_writing_imrad.md  sources_compliance_rf.md  statistical_analysis_flv.md
skills/vkr-bauman-flv/scripts/: doi_to_bibtex.py  md_to_docx_gost.py  mermaid_to_png.py  validate_bibtex_gost.py
